[workspace]
members = [
    "win-exec",
    "win-sudo",
    "win-shell",
    "win-file-hide",
    "win-proxy",
    "file-crypto",
    "sshh",
]

exclude = [
    "rust-docker-image-example",
    "rust-wait-group",
    "rust-context",
    "rust-flutter-ffi-example/rust",
]

[workspace.dependencies]
clap = "4.0"
crossbeam-channel = "0.5"
num_cpus = "1.13"
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
winapi = "0.3"
