[package]
name = "file-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
crossbeam-channel.workspace = true
num_cpus.workspace = true
rand.workspace = true
aes-gcm.workspace = true
sha2.workspace = true

[[bin]]
name = "encrypt"

[[bin]]
name = "decrypt"
